--- a/application/config/.env
+++ b/application/config/.env
@@ -3,6 +3,6 @@ CI_ENV="development"
 
 #Database Settings
 MYSQL_HOST_NAME="localhost"
-MYSQL_USERNAME="root"
-MYSQL_PASSWORD=""
-MYSQL_DB_NAME="ospos"
+MYSQL_USERNAME="palmyrabd"
+MYSQL_PASSWORD="Ae6z%5t34"
+MYSQL_DB_NAME="OSPOS"
